# electron-react-neon-typescript-boilerplate

./: .eslintrc  .gitignore  README.md  package.json  tsconfig.json
src/: Globals.d.ts
src/assets/: index.html
src/assets/css/: global.module.css
src/backend/: main.ts  preload.ts
src/frontend/: App.tsx  renderer.tsx
src/native/: Cargo.toml
src/native/src/: lib.rs
webpack/: webpack.main.config.js  webpack.plugins.js  webpack.renderer.config.js  webpack.rules.js
